--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@ article div:hover {
   height: 57px;
 }
 
-.btn-agendar{
+.btn-agendar, .btn-atras{
   background: #a82c29;
     color: #fff;
     cursor: pointer;
@@ -86,6 +86,36 @@ article div:hover {
 .btn-agendar:disabled{
   background-color:#222;
   cursor: not-allowed;
+}
+
+.btn-atras{
+  background: #D59549;
+}
+.btn-atras:hover {
+  background: #b67f3d;
+
+}
+.social_share {
+  padding:0.5rem 1rem;
+  border-radius:7px;
+  font-size: small;
+  color: #fff;
+  margin: 0 10px;
+  font-weight: 100;
+  opacity: 1;
+  transition: 0.3s;
+}
+.social_share:hover {
+  opacity:0.8;
+}
+.twitter {
+  background: #1DA1F2;
+}
+.facebook {
+  background: #1877F2;
+}
+.whatsapp {
+  background: #25D366;
 }
 /*///////////////////*/
 
