--- a/css/style.css
+++ b/css/style.css
@@ -1,29 +1,33 @@
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
 
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
-
-body{
-  background-image: linear-gradient( 
-    155deg
-     , rgb(239 229 213) 11.2%, rgb(199 187 163) 100.2% );
-    }
-
+body {
+  background-image: linear-gradient(
+    155deg,
+    rgb(239 229 213) 11.2%,
+    rgb(199 187 163) 100.2%
+  );
+  overflow: hidden;
+}
 
 header {
-  background-image: linear-gradient( 
-    109.5deg
-    , rgb(134 33 32) 11.2%, rgb(167 43 43) 100.2% );
+  background-image: linear-gradient(
+    109.5deg,
+    rgb(134 33 32) 11.2%,
+    rgb(167 43 43) 100.2%
+  );
 }
 
-h1, h2 {
-    font-size: 9vw;
+h1,
+h2 {
+  font-size: 9vw;
 }
 h3 {
-    font-size: 7vw;
-    font-family: 'Bebas Neue', sans-serif;
-    line-height: 2rem;
+  font-size: 7vw;
+  font-family: "Bebas Neue", sans-serif;
+  line-height: 2rem;
 }
 section {
- height: 80vh;   
+  height: 80vh;
 }
 
 .datosPersonales input {
@@ -32,88 +36,81 @@ section {
 }
 
 label {
-  font-family: 'Bebas Neue', sans-serif;
+  font-family: "Bebas Neue", sans-serif;
 }
-
 
 article div {
-    display: grid;
-    justify-items: center;
-    color: #222;
-    transition: 0.3s;
-    margin-top: 0;
-
-
+  display: grid;
+  justify-items: center;
+  color: #222;
+  transition: 0.3s;
+  margin-top: 0;
 }
-article div:hover, 
+article div:hover,
 article div:active {
-
-    color: #a82c29;
-    
-
+  color: #a82c29;
 }
 .icon {
-    transform: rotate(355deg);
+  transform: rotate(355deg);
 }
 .fileChoice {
-    background: #efe0c3;
-    margin: 3rem auto;
-    width: 80%;
-    min-height: 5.5rem;
-    place-items: center;
+  background: #efe0c3;
+  margin: 3rem auto;
+  width: 80%;
+  min-height: 5.5rem;
+  place-items: center;
 }
 .fileChoice label {
   line-height: 1px;
 }
 
-#fotoCamara, #fotoAdjunta {
+#fotoCamara,
+#fotoAdjunta {
   width: 59px;
   height: 57px;
 }
 
-.btn-agendar, .btn-atras{
+.btn-agendar,
+.btn-atras {
   background: #a82c29;
   color: #fff;
   cursor: pointer;
-  font-family: 'Bebas Neue';
+  font-family: "Bebas Neue";
   font-size: 2.5vh;
   transition: 0.3s;
   padding: 0.5rem 1rem;
   border-radius: 8px;
 }
 .btn-agendar:hover,
-.btn-agendar:active{
+.btn-agendar:active {
   background: #7c1e1d;
 }
 
-.btn-agendar:disabled{
-  background-color:#222;
+.btn-agendar:disabled {
+  background-color: #222;
   cursor: not-allowed;
 }
 
-.btn-atras{
-  background: #D59549;
+.btn-atras {
+  background: #d59549;
   margin-bottom: 1rem;
 }
 .btn-atras:hover {
   background: #b67f3d;
-
-
-  
 }
 .btn-atras::before {
-  content: 'hola';
-   font-family: "arial";
-   font-weight: normal;
-   font-style: normal;
-   margin:0px 0px 0px 10px;
-   text-decoration:none;
+  content: "hola";
+  font-family: "arial";
+  font-weight: normal;
+  font-style: normal;
+  margin: 0px 0px 0px 10px;
+  text-decoration: none;
 }
 
 /*Redes Sociales*/
 .social_share {
-  padding:0.5rem 1rem;
-  border-radius:7px;
+  padding: 0.5rem 1rem;
+  border-radius: 7px;
   font-size: small;
   color: #fff;
   font-weight: 100;
@@ -121,189 +118,202 @@ article div:active {
   transition: 0.3s;
 }
 .social_share:hover {
-  opacity:0.8;
+  opacity: 0.8;
 }
 .twitter {
-  background: #1DA1F2;
+  background: #1da1f2;
 }
 .facebook {
-  background: #1877F2;
+  background: #1877f2;
 }
 .whatsapp {
-  background: #25D366;
+  background: #25d366;
 }
 /*///////////////////*/
 
 .calendar,
-.form{
-    background-color: #f6efdf;
-    background-image: url('../img/bg-2.png');
-    background-size: 95%;
-    background-repeat: no-repeat;
-    background-blend-mode: multiply;
-    background-position: 50% 50%;
+.form {
+  background-color: #f6efdf;
+  background-image: url("../img/bg-2.png");
+  background-size: 95%;
+  background-repeat: no-repeat;
+  background-blend-mode: multiply;
+  background-position: 50% 50%;
 }
-
 
 select {
   width: 100%;
 }
 
-
 /* texto aceptar condiciones*/
 
-.click__me{
-    margin-top: 0;
-    color: #a72b29;
-    text-decoration: underline;
-    background-color: none;
+.click__me {
+  margin-top: 0;
+  color: #a72b29;
+  text-decoration: underline;
+  background-color: none;
 }
 
-.xdsoft_datetimepicker{
-background-color: none !important;
-border: none !important;
+.xdsoft_datetimepicker {
+  background-color: none !important;
+  border: none !important;
 }
 /* media */
 
-
 /*form styles*/
 #msform {
-	text-align: center;
-	position: relative;
+  text-align: center;
+  position: relative;
 }
 #msform fieldset {
-	background: rgb(239 229 213) 11.2%  url("../img/texturita.png" ) repeat;
-	border: 0 none;
-	border-radius: 8px;
-	box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.4);
-	padding: 20px 30px;
-	box-sizing: border-box;
+  background: rgb(239 229 213) 11.2% url("../img/texturita.png") repeat;
+  border: 0 none;
+  border-radius: 8px;
+  box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.4);
+  padding: 20px 30px;
+  box-sizing: border-box;
   display: grid;
-	margin: 0 10%;
+  margin: 0 10%;
   width: 80%;
-	
-	/*stacking fieldsets above each other*/
-	position: relative;
+
+  /*stacking fieldsets above each other*/
+  position: relative;
 }
 /*Hide all except first fieldset*/
 #msform fieldset:not(:first-of-type) {
-	display: none;
+  display: none;
 }
 /*inputs*/
 
 /*buttons*/
 #msform .action-button {
-	width: 100px;
-	background: #D59549;
-	font-weight: bold;
-	color: white;
-	border: 0 none;
-	border-radius: 1px;
-	cursor: pointer;
-	padding: 10px 5px;
-	margin: 10px 5px;
+  width: 100px;
+  background: #d59549;
+  font-weight: bold;
+  color: white;
+  border: 0 none;
+  border-radius: 1px;
+  cursor: pointer;
+  padding: 10px 5px;
+  margin: 10px 5px;
 }
-#msform .action-button:hover, #msform .action-button:focus {
-	box-shadow: 0 0 0 2px white, 0 0 0 3px #D59549;
+#msform .action-button:hover,
+#msform .action-button:focus {
+  box-shadow: 0 0 0 2px white, 0 0 0 3px #d59549;
 }
 /*headings*/
 
 /*progressbar*/
 #progressbar {
-	margin-bottom: 30px;
-	overflow: hidden;
-	/*CSS counters to number the steps*/
-	counter-reset: step;
+  margin-bottom: 30px;
+  overflow: hidden;
+  /*CSS counters to number the steps*/
+  counter-reset: step;
 }
 #progressbar li {
-	list-style-type: none;
-	text-transform: uppercase;
-	font-size: 9px;
-	width: 33.33%;
-	float: left;
-	position: relative;
+  list-style-type: none;
+  text-transform: uppercase;
+  font-size: 9px;
+  width: 33.33%;
+  float: left;
+  position: relative;
 }
 #progressbar li:before {
-	content: counter(step);
-	counter-increment: step;
-	width: 20px;
-	line-height: 20px;
-	display: block;
-	font-size: 10px;
-	color: #333;
-	background: white;
-	border-radius: 3px;
-	margin: 0 auto 5px auto;
+  content: counter(step);
+  counter-increment: step;
+  width: 20px;
+  line-height: 20px;
+  display: block;
+  font-size: 10px;
+  color: #333;
+  background: white;
+  border-radius: 3px;
+  margin: 0 auto 5px auto;
 }
 /*progressbar connectors*/
 #progressbar li:after {
-	content: '';
-	width: 100%;
-	height: 2px;
-	background: #ffffff;
-	position: absolute;
-	left: -50%;
-	top: 9px;
-	z-index: -1; /*put it behind the numbers*/
+  content: "";
+  width: 100%;
+  height: 2px;
+  background: #ffffff;
+  position: absolute;
+  left: -50%;
+  top: 9px;
+  z-index: -1; /*put it behind the numbers*/
 }
 #progressbar li:first-child:after {
-	/*connector not needed before the first step*/
-	content: none; 
+  /*connector not needed before the first step*/
+  content: none;
 }
 /*marking active/completed steps green*/
 /*The number of the step and the connector before it = green*/
-#progressbar li.active:before,  #progressbar li.active:after{
-	background: #D59549;
-	color: white;
+#progressbar li.active:before,
+#progressbar li.active:after {
+  background: #d59549;
+  color: white;
 }
 
-@media (min-width: 768px) { 
-
+@media (min-width: 768px) {
   h3 {
-
     line-height: 6rem;
     font-size: 5vw;
+  }
 
-      }   
+  .social_share {
+    margin: 0 10px;
+  }
+}
 
-      .social_share {
-        margin: 0 10px;
-
-    }
-
- }
-
- @media (min-width: 1536px) {
+@media (min-width: 1536px) {
   h3 {
-
     line-height: 5rem;
-      }   
-
   }
+}
 
+.custom-select select {
+  background-color: transparent;
+  border: 1px solid;
+  padding: 10px;
+  border-radius: 7px;
+  margin: 5px auto;
+}
 
-  .custom-select select{
-    background-color:transparent;
-    border: 1px solid;
-    padding: 10px;
-    border-radius: 7px;
-    margin: 5px auto;
-  }
-  
-  .botonAnimado {
-    animation: shake 0.5s;
-  }
+.botonAnimado {
+  animation: shake 0.5s;
+}
 
-  @keyframes shake {
-    0% { transform: translate(1px, 1px) rotate(0deg); }
-    10% { transform: translate(-1px, -2px) rotate(-1deg); }
-    20% { transform: translate(-3px, 0px) rotate(1deg); }
-    30% { transform: translate(3px, 2px) rotate(0deg); }
-    40% { transform: translate(1px, -1px) rotate(1deg); }
-    50% { transform: translate(-1px, 2px) rotate(-1deg); }
-    60% { transform: translate(-3px, 1px) rotate(0deg); }
-    70% { transform: translate(3px, 1px) rotate(-1deg); }
-    80% { transform: translate(-1px, -1px) rotate(1deg); }
-    90% { transform: translate(1px, 2px) rotate(0deg); }
-    100% { transform: translate(1px, -2px) rotate(-1deg); }
+@keyframes shake {
+  0% {
+    transform: translate(1px, 1px) rotate(0deg);
   }
+  10% {
+    transform: translate(-1px, -2px) rotate(-1deg);
+  }
+  20% {
+    transform: translate(-3px, 0px) rotate(1deg);
+  }
+  30% {
+    transform: translate(3px, 2px) rotate(0deg);
+  }
+  40% {
+    transform: translate(1px, -1px) rotate(1deg);
+  }
+  50% {
+    transform: translate(-1px, 2px) rotate(-1deg);
+  }
+  60% {
+    transform: translate(-3px, 1px) rotate(0deg);
+  }
+  70% {
+    transform: translate(3px, 1px) rotate(-1deg);
+  }
+  80% {
+    transform: translate(-1px, -1px) rotate(1deg);
+  }
+  90% {
+    transform: translate(1px, 2px) rotate(0deg);
+  }
+  100% {
+    transform: translate(1px, -2px) rotate(-1deg);
+  }
+}
